--- a/lesson_7/style.css
+++ b/lesson_7/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+.arrow {
+  font-size: 40px;
+}
+
 html {
   /* корневой размер шрифта */
   font-size: 15px;
@@ -125,7 +129,7 @@ footer {
     background-color: rgb(189, 68, 68);
   } */
 
-  nav > a {
+  nav>a {
     /* прячем все ссылки из меню */
     display: none;
   }
@@ -140,6 +144,7 @@ footer {
   .grid-gallery {
     grid-auto-rows: 500px;
   }
+
   .img-wrapper {
     width: 100%;
     height: 300px;
