--- a/lesson_17/style.css
+++ b/lesson_17/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 
+
 body {
   display: flex;
   flex-direction: column;
@@ -26,6 +27,9 @@ header {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   flex: 1;
   padding: 15px;
 }
@@ -84,4 +88,29 @@ footer {
 
 .loader-hide {
   display: none;
+}
+
+.form-items {
+  margin-bottom: 10px;
+}
+
+.form-items>button {
+  border: none;
+  color: #fff;
+  background-color: #ff3d00;
+  padding: 3px 10px;
+  border-radius: 3px;
+}
+
+.form-items>button:hover {
+  border: 1px solid #ff3d00;
+  color: #ff3d00;
+  padding: 2px 9px;
+  background-color: #fff;
+}
+
+.form-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
